--- a/style.css
+++ b/style.css
@@ -152,4 +152,26 @@ body {
   width: 100%;
   height: auto;
 }
+
+.button {
+  text-align: center;
+  background-color: var(--c-background);
+  border: none;
+  color: var(--c-button);
+  padding: 18px 32px;
+  border-radius: 6px;
+  max-width: 100%;
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button--margin-left {
+  margin-left: 30px;
+}
+
+.button--margin-right {
+  margin-right: 60px;
+}
 /*# sourceMappingURL=style.css.map */
